feat: add ban user admin route
