# internal/api/router/router.go
@@ -46,4 +46,6 @@ func registerAdminRoutes(r gin.RouterGroup) {
 
 	r.POST("admin/token/invalidate", admin.InvalidateTokenHandler)
 	r.POST("admin/token/invalidate-all", admin.InvalidateAllTokensHandler)
+	r.POST("admin/user/:user_id/ban", admin.ChangeUserStatushandler(types.StatusBanned))
+	r.POST("admin/user/:user_id/unban", admin.ChangeUserStatushandler(types.StatusOk))
 }
